--- a/_includes/projects_horizontal.html
+++ b/_includes/projects_horizontal.html
@@ -8,10 +8,7 @@
       <div class="row g-0">
         {% if project.img %}
         <div class="card-img col-md-6">
-          {% responsive_image_block %}
-            path: {{ project.img }}
-            alt: "project thumbnail"
-          {% endresponsive_image_block %}
+          <img src="assets/img/1.jpg" alt="">
         </div>
         <div class="col-md-6">
         {% else %}
