--- a/_includes/social.html
+++ b/_includes/social.html
@@ -16,5 +16,7 @@
 {% if site.gitlab_username %}<a href="https://gitlab.com/{{ site.gitlab_username }}" title="GitLab"><i class="fab fa-gitlab"></i></a>{% endif %}
 {% if site.dblp_url %}<a href="{{ site.dblp_url }}" title="DBLP"><i class="ai ai-dblp"></i></a>{% endif %}
 {% if site.stackoverflow_id %}<a href="https://stackoverflow.com/users/{{ site.stackoverflow_id }}" title="Stackoverflow"><i class="fab fa-stack-overflow"></i></a>{% endif %}
+{% if site.instagram %}<a href="https://www.instagram.com/{{ site.instagram }}" title="Instagram"><i class="fab fa-instagram"></i></a>{% endif %}
+{% if site.pinterest %}<a href="https://in.pinterest.com/{{ site.pinterest }}" title="Pinterest"><i class="fab fa-pinterest"></i></a>{% endif %}
 
 {% if site.rss_icon %}<a href="{{ site.baseurl | prepend: site.url }}/feed.xml" title="RSS Feed"><i class="fas fa-rss-square"></i></a>{% endif %}
