--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -15,10 +15,7 @@ layout: default
     {% if page.profile %}
     <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
       {% if page.profile.image %}
-        {% responsive_image_block %}
-          path: {{ page.profile.image | prepend: 'assets/img/' }}
-          class: "img-fluid z-depth-1 rounded"
-        {% endresponsive_image_block %}
+        <img src="assets/img/{{page.profile.image}}" alt="">
       {% endif %}
       {% if page.profile.address %}
         <div class="address">
