--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,10 +33,10 @@
           </li>
           {% if site.blog_name %}
           <!-- Blog -->
-          <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/blog/' | relative_url }}">
-              blog
-              {% if page.title == "blog" %}
+          <li class="nav-item {% if page.url contains 'work' %}active{% endif %}">
+            <a class="nav-link" href="{{ '/work/' | relative_url }}">
+              work
+              {% if page.title == "work" %}
               <span class="sr-only">(current)</span>
               {% endif %}
             </a>
