--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -446,6 +446,7 @@ section {
         height: 1px;
         background-color: var(--color-grey-5);
         transform: translateX(-50%);
+        position: absolute;
     }
 }
 
@@ -506,4 +507,99 @@ section {
             text-align: justify;
         }
     }
+}
+
+/* Portfolio */
+.port-text {
+    padding: 2rem 0;
+    text-align: center;
+}
+
+h3 {
+    font-size: 1.5rem;
+    color: var(--color-white);
+    margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.portfolios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    margin-top: 3rem;
+
+    .portfolio-item {
+        position: relative;
+        border-radius: 15px;
+
+        img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 15px;
+        }
+
+        .hover-item {
+            width: 100%;
+            height: 100%;
+            background-color: var(--color-secondary);
+            position: absolute;
+            left: 0;
+            top: 0;
+            border-radius: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            opacity: 0;
+            transform: scale(0);
+            transition: all .4s ease-in-out;
+
+            h3 {
+                font-size: 1.5rem;
+                color: var(--color-white);
+                margin-bottom: 1.5rem;
+            }
+
+            .icons {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .icon {
+                    background-color: var(--color-primary);
+                    border-radius: 50%;
+                    width: 50px;
+                    height: 50px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: 0 1rem;
+                    cursor: pointer;
+                    transition: .4s all ease-in-out;
+
+                    i {
+                        font-size: 1.5rem;
+                        color: var(--color-white);
+                        margin: 0 1rem;
+                    }
+
+                    &:hover {
+                        background-color: var(--color-white);
+
+                        i {
+                            color: var(--color-primary);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.portfolio-item:hover .hover-item {
+    opacity: 1;
+    transform: scale(1);
 }
